# OrgelProject

./: .gitignore  .gitmodules  README.md  pyproject.toml
scripts/: generate_webmushra_ab_batches.py
src/marcussen/: __init__.py  audio.py  audio_prep.py  cli.py  compare.py  constants.py  dataset.py  experiment.py  listening_dataset.py  pairs.py  parsing.py
src/marcussen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
